--- a/projects/DatasetNeRF/index.html
+++ b/projects/DatasetNeRF/index.html
@@ -161,7 +161,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://drive.google.com/drive/u/2/folders/16PoA_x6RObpZfEdoeaBAg5X-1ymjNASp"
+                <a href="https://drive.google.com/drive/folders/1f2w0t_1IIeVcMJsxmV-1I309M8ljY2FG?usp=sharing"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
