init commit for my website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Yu Chi</title>
+    <meta name="author" content="Yu Chi">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  </head>
+
+  <body>
+    <table style="width:100%;max-width:800px;border:0;border-spacing:0;margin:0 auto;">
+      <tbody>
+        <tr>
+          <td>
+            <table style="width:100%;border:0;border-spacing:0;margin:0 auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:2.5%;width:60%;vertical-align:middle;">
+                    <p class="name" style="text-align:center;">Yu Chi</p>
+                    <p>
+                      I'm a master's student at <a href="https://www.tum.de/en/">Technical University of Munich</a>, majoring in <a href="https://www.tum.de/studium/studienangebot/detail/robotics-cognition-intelligence-master-of-science-msc">Robotics, Cognition, and Intelligence</a>. 
+                      I have been fortunately working with <a href="https://fnzhan.com">Dr. Fangneng Zhan</a>, <a href="https://gvrl.mpi-inf.mpg.de">Dr. Adam Kortylewski</a>, and <a href="https://people.mpi-inf.mpg.de/~theobalt">Prof. Christian Theobalt</a> at the <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Max Planck Institute for Informatics</a>.
+                      <p>
+                      <p>
+                      Previously, I studied computer engineering at <a href="https://www.rwth-aachen.de/go/id/a/?lidx=1">RWTH Aachen University</a>. 
+                      I have received the Germany Scholarship (Deutschland Stipendium) and was awarded a place on the Dean's List during my bachelor's studies, graduating in the top 5%.
+                      <p>
+                      <p>
+                      I am interested in the intersection of computer vision, computer graphics, and machine learning, particularly in better understanding, representing, and generatively modeling our 3D/4D world.
+                      </p>
+                    </p>
+                    <p style="text-align:center;">
+                      <a href="mailto:ychi9808@gmail.com">Email</a> &nbsp;/&nbsp;
+                      <a href="data/YuCHI_CV.pdf">CV</a> &nbsp;/&nbsp;
+                      <a href="https://scholar.google.com/citations?user=Xk4KlMYAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
+                      <a href="https://x.com/YuChi__26">Twitter</a> &nbsp;/&nbsp;
+                      <a href="https://github.com/ychgoaround">Github</a>
+                    </p>
+                  </td>
+                  <td style="padding:5.0%;width:35%;vertical-align:middle;">
+                    <a href="images/yuchi.jpg">
+                      <img style="width:100%;border-radius:50%;" alt="profile photo" src="images/yuchi.jpg">
+                    </a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table style="width:100%;border:0;border-spacing:0;margin:0 auto;">
+              <tbody>
+                <tr>
+                  <td style="padding:10px;vertical-align:middle;">
+                    <h2>Publications</h2>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table style="width:100%;border:0;border-spacing:0;margin:0 auto;">
+              <tbody>
+                <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
+                  <td style="padding:40px;width:25%;vertical-align:middle;">
+                    <div class="one" style="margin-top: 5px;">
+                      <!-- <div class="two" id="nuvo_image">
+                        <video width="100%" muted autoplay loop>
+                          <source src="images/nuvo.mp4" type="video/mp4">
+                          Your browser does not support the video tag.
+                        </video>
+                      </div> -->
+                      <img src="projects/DatasetNeRF/static/images/Picture1.png" width="125%">
+                    </div>
+                    <!-- <script type="text/javascript">
+                      function nuvo_start() {
+                        document.getElementById('nuvo_image').style.opacity = "1";
+                      }
+
+                      function nuvo_stop() {
+                        document.getElementById('nuvo_image').style.opacity = "0";
+                      }
+                      nuvo_stop();
+                    </script> -->
+                  </td>
+                  <td style="padding:20px;width:75%;vertical-align:middle;">
+                    <div style="margin-top: -10px;">
+                    <!-- <a href="https://ychgoaround.github.io/projects/DatasetNeRF"> -->
+                      <span class="papertitle">DatasetNeRF: Efficient 3D-aware Data Factory with Generative Radiance Fields</span>
+                    </div>
+                    </a>
+                    <br>
+                    <strong>Yu Chi</strong>,
+                    <a href="https://fnzhan.com/">Fangneng Zhan</a>,
+                    <a href="https://sibowu.com/">Sibo Wu</a>,
+                    <a href="https://people.mpi-inf.mpg.de/~theobalt/">Christian Theobalt</a>,
+                    <a href="https://gvrl.mpi-inf.mpg.de/">Adam Kortylewski</a>
+                    <br>
+                    <em>ECCV</em>, 2024
+                    <br>
+                    <a href="https://ychgoaround.github.io/projects/DatasetNeRF">project page</a>
+                    /
+                    <a href="https://arxiv.org/abs/2311.12063">arXiv</a>
+                    <p></p>
+                    <p>
+                      Infinite 3D-aware Data Factory with minimal 2D human annotations using Generative Radiance Fields.
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
+</html>
