--- a/projects/DatasetNeRF/index.html
+++ b/projects/DatasetNeRF/index.html
@@ -96,7 +96,7 @@
             <span class="author-block">
               <a href="https://fnzhan.com/">Fangneng Zhan</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://github.com/Sibo2rr">Sibo Wu</a><sup>1</sup>,
+              <a href="https://sibowu.com/">Sibo Wu</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://people.mpi-inf.mpg.de/~theobalt/">Christian Theobalt</a><sup>2</sup>,
