commit for my website

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
                     <p class="name" style="text-align:center;">Yu Chi</p>
                     <p>
                       I'm a master's student at <a href="https://www.tum.de/en/">Technical University of Munich</a>, majoring in <a href="https://www.tum.de/studium/studienangebot/detail/robotics-cognition-intelligence-master-of-science-msc">Robotics, Cognition, and Intelligence</a>. 
-                      I have been fortunately working with <a href="https://fnzhan.com">Dr. Fangneng Zhan</a>, <a href="https://gvrl.mpi-inf.mpg.de">Dr. Adam Kortylewski</a>, and <a href="https://people.mpi-inf.mpg.de/~theobalt">Prof. Christian Theobalt</a> at the <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Max Planck Institute for Informatics</a>.
+                      I have had the privilege of working with <a href="https://fnzhan.com">Dr. Fangneng Zhan</a>, <a href="https://gvrl.mpi-inf.mpg.de">Dr. Adam Kortylewski</a>, and <a href="https://people.mpi-inf.mpg.de/~theobalt">Prof. Christian Theobalt</a> at the <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Max Planck Institute for Informatics</a>.
                       <p>
                       <p>
                       Previously, I studied computer engineering at <a href="https://www.rwth-aachen.de/go/id/a/?lidx=1">RWTH Aachen University</a>. 
-                      I have received the Germany Scholarship (Deutschland Stipendium) and was awarded a place on the Dean's List during my bachelor's studies, graduating in the top 5%.
+                      I have received the Germany Scholarship (Deutschland Stipendium) and was awarded a place on the Dean's List, graduating in the top 5%.
                       <p>
                       <p>
-                      I am interested in the intersection of computer vision, computer graphics, and machine learning, particularly in better understanding, representing, and generatively modeling our 3D/4D world.
+                      I am deeply interested in the intersection of computer vision, computer graphics, and machine learning, particularly in enhancing our understanding, representation, and generatively modeling of our 3D/4D world.
                       </p>
+                      <p>
+                      I am actively seeking a PhD position starting in Spring/Fall 2025! Feel free to <a href="ychi9808@gmail.com">contact me</a>! : )
+                      <p>
                     </p>
                     <p style="text-align:center;">
                       <a href="mailto:ychi9808@gmail.com">Email</a> &nbsp;/&nbsp;
