--- a/projects/DatasetNeRF/index.html
+++ b/projects/DatasetNeRF/index.html
@@ -150,7 +150,7 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="Code Coming Soon"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -158,7 +158,17 @@
                   </span>
                   <span>Code</span>
                   </a>
+              </span> -->
+              <span class="link-block">
+                <a href="#"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code Coming Soon</span>
+                </a>
               </span>
+              
               <!-- Dataset Link. -->
               <span class="link-block">
                 <a href="https://drive.google.com/drive/folders/1f2w0t_1IIeVcMJsxmV-1I309M8ljY2FG?usp=sharing"
