--- a/projects/DatasetNeRF/index.html
+++ b/projects/DatasetNeRF/index.html
@@ -160,12 +160,12 @@
                   </a>
               </span> -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://github.com/GenIntel/DatasetNeRF"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code Coming Soon</span>
+                  <span>Code</span>
                 </a>
               </span>
               
