--- a/projects/DatasetNeRF/index.html
+++ b/projects/DatasetNeRF/index.html
@@ -121,7 +121,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://arxiv.org/abs/2311.12063"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -129,7 +129,7 @@
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2311.12063"
                    class="external-link button is-normal is-rounded is-dark">
